plugins {
  id 'java'
}

java.toolchain.languageVersion.set(JavaLanguageVersion.of(16))

tasks.withType(JavaCompile) {
  options.encoding 'UTF-8'
  sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16
}

repositories {
  maven {
    url 'https://heisluft.de/maven/'
  }
  maven {
    url 'https://maven.minecraftforge.net/'
  }
}

dependencies {
  compileClasspath 'org.jetbrains:annotations:23.0.0'
  implementation "org.fusesource.jansi:jansi:2.4.0"
  implementation 'cpw.mods:modlauncher:10.0.1'
  implementation 'cpw.mods:bootstraplauncher:1.1.0'
  implementation 'cpw.mods:securejarhandler:2.0.3'
  implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
  runtimeClasspath rootProject
}